<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/loginFragment">
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.udacity.moviestore.LoginFragment"
        android:label="@string/login_title"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_welcomeFragment"
            app:destination="@id/welcomeFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/welcomeFragment"
        android:name="com.udacity.moviestore.WelcomeFragment"
        android:label="@string/welcome_title"
        tools:layout="@layout/fragment_welcome">
        <action
            android:id="@+id/action_welcomeFragment_to_instructionsFragment"
            app:destination="@id/instructionsFragment"
            app:popUpTo="@id/welcomeFragment" />
    </fragment>
    <fragment
        android:id="@+id/instructionsFragment"
        android:name="com.udacity.moviestore.InstructionsFragment"
        android:label="@string/instructions_title"
        tools:layout="@layout/fragment_instructions">
        <action
            android:id="@+id/action_instructionsFragment_to_listFragment"
            app:destination="@id/listFragment"
            app:popUpTo="@id/welcomeFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/listFragment"
        android:name="com.udacity.moviestore.ListFragment"
        android:label="@string/list_title"
        tools:layout="@layout/fragment_list" >
        <action
            android:id="@+id/action_listFragment_to_detailFragment"
            app:destination="@id/detailFragment"
            app:popUpTo="@id/listFragment" />
    </fragment>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.udacity.moviestore.AboutFragment"
        android:label="@string/about_title"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/detailFragment"
        android:name="com.udacity.moviestore.DetailFragment"
        android:label="@string/detail_title"
        tools:layout="@layout/fragment_detail">
        <action
            android:id="@+id/action_detailFragment_to_listFragment"
            app:destination="@id/listFragment"
            app:popUpTo="@id/listFragment"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>